--- a/index.html
+++ b/index.html
@@ -2661,7 +2661,7 @@
         });
         }
 
-        window.addEventListener("DOMContentLoaded", restoreHiddenState);
+        //window.addEventListener("DOMContentLoaded", restoreHiddenState);
 
         document.addEventListener("keydown", (e) => {
         const key = e.key.toLowerCase();
